Fixed card spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/*test comment*/
 :root{
 
 }
@@ -64,23 +63,23 @@ footer > div#date-time{
 }
 
 main {
-  display: flex; 
-  flex: auto;
-  background-color: #ccc;
-  justify-content:space-around;
-  padding: 20px;
-  gap: 20px;
-  
+  display: flex;
+  background-color: #cccccc;
+  height: 85%;
+  justify-content: space-around;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .card {
-
-  background-color: white;  /*flex basis: 25%*/
+  flex-grow: 1;
+  background-color: white;
   z-index: 2;                  /*padding-left, padding-right: 0.25rem */
-  flex: 1 1 auto; 
-  padding: 10px;
-  height: 99vh;
-  width: 99vw; 
+  margin-left: 1rem;
+  margin-right: 1rem;
+  padding: 1rem;
 }
 
 .card-content{
